Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
-title: Introduction
-description: 'Welcome to the home of your new documentation'
+title: Введение
+description: 'Изучите API, руководства и примеры для интеграции с Квант.'
 ---
 
 <img
