Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -2,19 +2,18 @@
 title: Введение
 description: 'Изучите API, руководства и примеры для интеграции с Квант.'
 ---
+API Квант представляет собой RESTful API, который позволяет вам программно взаимодействовать с документами Квант:
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.svg"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.svg"
-  alt="Hero Dark"
-/>
+<ul>
+  <li>Просмотр и поиск документов Квант</li>
+  <li>Создание новых документов и копирование существующих</li>
+  <li>Общий доступ и публикация документов</li>
+  <li>Исследование страниц, таблиц, формул и элементов управления</li>
+  <li>Чтение, вставка, добавление, обновление и удаление строк</li>
+</ul>
+---
 
-## Setting up
+## Начало работы
 
 The first step to world-class documentation is setting up your editing environnments.
 
