Documentation edits made through Mintlify web editor

--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -1,24 +1,19 @@
 ---
 title: 'Введение'
-description: 'Example section for showcasing API endpoints'
 ---
+API Квант представляет собой RESTful API, который позволяет вам программно взаимодействовать с документами Квант:
 
-<Note>
-  If you're not looking to build API reference documentation, you can delete
-  this section by removing the api-reference folder.
-</Note>
+<ul>
+  <li>Просмотр и поиск документов Квант</li>
+  <li>Создание новых документов и копирование существующих</li>
+  <li>Общий доступ и публикация документов</li>
+  <li>Исследование страниц, таблиц, формул и элементов управления</li>
+  <li>Чтение, вставка, добавление, обновление и удаление строк</li>
+</ul>
+---
+## Использование API
 
-## Welcome
-
-There are two ways to build API documentation: [OpenAPI](https://mintlify.com/docs/api-playground/openapi/setup) and [MDX components](https://mintlify.com/docs/api-playground/mdx/configuration). For the starter kit, we are using the following OpenAPI specification.
-
-<Card
-  title="Plant Store Endpoints"
-  icon="leaf"
-  href="https://github.com/mintlify/starter/blob/main/api-reference/openapi.json"
->
-  View the OpenAPI specification file
-</Card>
+REST API Квант разработан так, чтобы его было просто использовать. Вы можете выбрать любой язык и платформу для отправки запросов. Чтобы лучше ознакомиться с API, вы также можете использовать инструменты вроде [Postman](https://www.postman.com/) или [Insomnia](https://mintlify.com/docs/api-playground/mdx/configuration).
 
 ## Authentication
 
