Documentation edits made through Mintlify web editor

--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Введение'
 ---
-API Квант представляет собой RESTful API, который позволяет вам программно взаимодействовать с документами Квант:
+API Квант представляет собой RESTful API, который позволяет вам взаимодействовать с документами Квант:
 
 <ul>
   <li>Просмотр и поиск документов Квант</li>
