Documentation edits made through Mintlify web editor

--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -22,3 +22,7 @@ API Квант использует API-ключи для проверки и а
 ```json
 Bearer ВАШ_API_КЛЮЧ
 ```
+Ваши API-ключи - это ключи к вашему аккаунту, поэтому их нужно хранить в тайне и безопасности. Не делитесь ими на GitHub или где-либо в интернете, где кто-то мог бы их увидеть.
+
+Также помните, что эти ключи предназначены для использования на вашем сервере, а не в клиентском коде, который виден всем пользователям вашего сайта. Это мера предосторожности, чтобы никто случайно не увидел ваш ключ и не получил доступ к вашему аккаунту.
+
