--- a/api-reference/endpoint/post-tasks.mdx
+++ b/api-reference/endpoint/post-tasks.mdx
@@ -2,3 +2,63 @@
 title: 'Создание коммуникации'
 openapi: 'POST /api/tasks/'
 ---
+
+### POST /api/tasks
+
+Этот метод API позволяет создать новую задачу в системе Квант. Вы должны передать в теле запроса необходимые данные задачи.
+
+### Авторизация
+
+Для всех запросов к API требуется API-ключ. Вы должны передать его в заголовке Authorization с префиксом Bearer.
+
+Authorization: Bearer ваш_API-ключ
+
+bash
+Copy code
+
+### Тело запроса
+
+Тело запроса должно быть в формате `application/json` и содержать следующие поля:
+
+```json
+{
+  "name": "Название задачи",
+  "type": "тип задачи",
+  "description": "Описание задачи",
+  "to_user_id": "идентификатор пользователя, назначенного исполнителем"
+}
+name (string, required) - Название задачи.
+type (string, required) - Тип задачи, допустимые значения: "задача", "обращение", "принятое решение".
+description (string, optional) - Подробное описание задачи.
+to_user_id (string, required) - Идентификатор пользователя, назначенного исполнителем.
+Успешный ответ
+При успешном создании задачи возвращается объект с подробной информацией о задаче.
+
+json
+Copy code
+HTTP/1.1 200 OK
+Content-Type: application/json
+
+{
+  "id": "идентификатор задачи",
+  "name": "Название задачи",
+  "type": "тип задачи",
+  "status": "входящая",
+  "description": "Описание задачи",
+  "to_user_id": "идентификатор пользователя, назначенного исполнителем",
+  "created_at": "дата и время создания задачи в формате ISO 8601"
+}
+Ошибка
+Если запрос не может быть обработан из-за неверных данных, возвращается ошибка с соответствующим описанием.
+
+json
+Copy code
+HTTP/1.1 400 Bad Request
+Content-Type: application/json
+
+{
+  "error": "Ошибка валидации",
+  "message": "Неверно указаны данные задачи"
+}
+Пример использования
+Для создания задачи отправьте POST запрос на /api/tasks с необходимыми данными в JSON формате. В ответе вы получите информацию о созданной задаче или описание ошибки, если запрос выполнить не удалось.
