Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/post-tasks.mdx
+++ b/api-reference/endpoint/post-tasks.mdx
@@ -5,16 +5,13 @@ openapi: 'POST /api/tasks/'
 
 ### POST /api/tasks
 
-Этот метод API позволяет создать новую задачу в системе Квант. Вы должны передать в теле запроса необходимые данные задачи.
+Этот метод API позволяет создать новую задачу в системе Квант. Необходимо передать в теле запроса данные задачи.
 
 ### Авторизация
 
 Для всех запросов к API требуется API-ключ. Вы должны передать его в заголовке Authorization с префиксом Bearer.
 
 Authorization: Bearer ваш_API-ключ
-
-bash
-Copy code
 
 ### Тело запроса
 
