Documentation edits made through Mintlify web editor

--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -1,16 +1,10 @@
 ---
 title: 'Введение в API Квант'
 ---
-API Квант представляет собой RESTful API, который позволяет вам взаимодействовать с документами Квант:
+Добро пожаловать в документацию по API Квант! Здесь вы найдете информацию обо всех конечных точках API Квант, сможете ознакомиться с инструкциями по их использованию и узнать, какие данные они возвращают.
 
-<ul>
-  <li>Просмотр и поиск документов Квант</li>
-  <li>Создание новых документов и копирование существующих</li>
-  <li>Общий доступ и публикация документов</li>
-  <li>Исследование страниц, таблиц, формул и элементов управления</li>
-  <li>Чтение, вставка, добавление, обновление и удаление строк</li>
-</ul>
----
+API Квант разработан с учетом архитектурного стиля REST, предлагает логично структурированные URL, предназначенные для работы с ресурсами, принимает запросы с данными в формате `application/x-www-form-urlencoded`, отвечает данными в формате JSON, а также следует стандартам использования HTTP статус-кодов, механизмов аутентификации и HTTP методов.
+
 ## Использование API
 
 REST API Квант разработан так, чтобы его было просто использовать. Вы можете выбрать любой язык и платформу для отправки запросов. Чтобы лучше ознакомиться с API, вы также можете использовать инструменты вроде [Postman](https://www.postman.com/) или [Insomnia](https://mintlify.com/docs/api-playground/mdx/configuration).
@@ -22,7 +16,7 @@ API Квант использует API-ключи для проверки и а
 ```json
 Bearer ВАШ_API_КЛЮЧ
 ```
-Ваши API-ключи - это ключи к вашему аккаунту, поэтому их нужно хранить в тайне и безопасности. Не делитесь ими на GitHub или где-либо в интернете, где кто-то мог бы их увидеть.
+API-ключи - это ключи к вашему аккаунту, поэтому их нужно хранить в тайне и безопасности. Не делитесь ими на GitHub или где-либо в интернете, где кто-то мог бы их увидеть.
 
 Также помните, что эти ключи предназначены для использования на вашем сервере, а не в клиентском коде, который виден всем пользователям вашего сайта. Это мера предосторожности, чтобы никто случайно не увидел ваш ключ и не получил доступ к вашему аккаунту.
 
