--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Введение в API Квант'
 ---
-Добро пожаловать в документацию по API Квант! Здесь вы найдете информацию обо всех конечных точках API Квант, сможете ознакомиться с инструкциями по их использованию и узнать, какие данные они возвращают.
+Добро пожаловать в документацию по API Квант! Здесь вы найдете информацию обо всех методах API Квант, сможете ознакомиться с инструкциями по их использованию и узнать, какие данные они возвращают.
 
 API Квант разработан с учетом архитектурного стиля REST, предлагает логично структурированные URL, предназначенные для работы с ресурсами, принимает запросы с данными в формате `application/x-www-form-urlencoded`, отвечает данными в формате JSON, а также следует стандартам использования HTTP статус-кодов, механизмов аутентификации и HTTP методов.
 
