Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/post-tasks.mdx
+++ b/api-reference/endpoint/post-tasks.mdx
@@ -6,12 +6,17 @@ openapi: 'POST /api/tasks/'
 ### POST /api/tasks
 
 Этот метод API позволяет создать новую задачу в системе Квант. Необходимо передать в теле запроса данные задачи.
+Вы должны указать название задачи и исполнителя, но вы также можете определить тип задачи и подробное описание, которые подходят для вашего варианта использования.
+
+Если вы не задаёте тип задачи при создании, будет использован тип по умолчанию. Эти параметры включают "задачу", "обращение", "принятое решение".
+
+Политика доступа к задаче устанавливается как открытая по умолчанию для новых задач. Вы также можете добавить политику доступа при создании новой задачи, добавив `"accessPolicy": { "type": "public" }`
 
 ### Авторизация
 
 Для всех запросов к API требуется API-ключ. Вы должны передать его в заголовке Authorization с префиксом Bearer.
 
-Authorization: Bearer ваш_API-ключ
+Bearer ваш_API-ключ
 
 ### Тело запроса
 
