--- a/api-reference/endpoint/post-tasks.mdx
+++ b/api-reference/endpoint/post-tasks.mdx
@@ -16,7 +16,9 @@ openapi: 'POST /api/tasks/'
 
 Для всех запросов к API требуется API-ключ. Вы должны передать его в заголовке Authorization с префиксом Bearer.
 
+```json
 Bearer ваш_API-ключ
+```
 
 ### Тело запроса
 
@@ -29,6 +31,8 @@ Bearer ваш_API-ключ
   "description": "Описание задачи",
   "to_user_id": "идентификатор пользователя, назначенного исполнителем"
 }
+```
+
 name (string, required) - Название задачи.
 type (string, required) - Тип задачи, допустимые значения: "задача", "обращение", "принятое решение".
 description (string, optional) - Подробное описание задачи.
