Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/post-tasks.mdx
+++ b/api-reference/endpoint/post-tasks.mdx
@@ -33,15 +33,15 @@ Bearer ваш_API-ключ
 }
 ```
 
-name (string, required) - Название задачи.
-type (string, required) - Тип задачи, допустимые значения: "задача", "обращение", "принятое решение".
-description (string, optional) - Подробное описание задачи.
-to_user_id (string, required) - Идентификатор пользователя, назначенного исполнителем.
-Успешный ответ
+- `name` (string, required) - Название задачи.
+- `type` (string, required) - Тип задачи, допустимые значения: "задача", "обращение", "принятое решение".
+- `description` (string, optional) - Подробное описание задачи.
+- `to_user_id` (string, required) - Идентификатор пользователя, назначенного исполнителем.
+
+### Успешный ответ
 При успешном создании задачи возвращается объект с подробной информацией о задаче.
 
-json
-Copy code
+```json
 HTTP/1.1 200 OK
 Content-Type: application/json
 
@@ -56,9 +56,9 @@ Content-Type: application/json
 }
 Ошибка
 Если запрос не может быть обработан из-за неверных данных, возвращается ошибка с соответствующим описанием.
+```
 
-json
-Copy code
+```json
 HTTP/1.1 400 Bad Request
 Content-Type: application/json
 
@@ -66,5 +66,6 @@ Content-Type: application/json
   "error": "Ошибка валидации",
   "message": "Неверно указаны данные задачи"
 }
+```
 Пример использования
 Для создания задачи отправьте POST запрос на /api/tasks с необходимыми данными в JSON формате. В ответе вы получите информацию о созданной задаче или описание ошибки, если запрос выполнить не удалось.
