--- a/api-reference/endpoint/post-tasks.mdx
+++ b/api-reference/endpoint/post-tasks.mdx
@@ -54,9 +54,10 @@ Content-Type: application/json
   "to_user_id": "идентификатор пользователя, назначенного исполнителем",
   "created_at": "дата и время создания задачи в формате ISO 8601"
 }
-Ошибка
-Если запрос не может быть обработан из-за неверных данных, возвращается ошибка с соответствующим описанием.
 ```
+
+### Ошибка
+Если запрос не может быть обработан из-за неверных данных, возвращается ошибка с соответствующим описанием.
 
 ```json
 HTTP/1.1 400 Bad Request
@@ -67,5 +68,5 @@ Content-Type: application/json
   "message": "Неверно указаны данные задачи"
 }
 ```
-Пример использования
-Для создания задачи отправьте POST запрос на /api/tasks с необходимыми данными в JSON формате. В ответе вы получите информацию о созданной задаче или описание ошибки, если запрос выполнить не удалось.
+### Пример использования
+Для создания задачи отправьте POST запрос на `/api/tasks` с необходимыми данными в JSON формате. В ответе вы получите информацию о созданной задаче или описание ошибки, если запрос выполнить не удалось.
