Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/delete-task.mdx
+++ b/api-reference/endpoint/delete-task.mdx
@@ -2,3 +2,40 @@
 title: 'Удаление коммуникации'
 openapi: 'DELETE /api/tasks/{id}'
 ---
+
+Метод `DELETE /api/tasks/{id}` позволяет удалить существующую задачу в системе Квант. Необходимо передать в строке запроса идентификатор задачи, которую вы хотите удалить.
+
+Удаление задачи является необратимой операцией, поэтому используйте этот метод с осторожностью.
+
+### Авторизация
+
+Для всех запросов к API требуется API-ключ. Вы должны передать его в заголовке Authorization с префиксом Bearer.
+
+```json
+Bearer ваш_API-ключ
+```
+
+### Параметры запроса
+
+При отправке запроса необходимо указать идентификатор задачи в URL.
+
+- `id` (string, required) - Уникальный идентификатор задачи, которую вы хотите удалить.
+
+### Ответы API
+
+Успешное удаление задачи вернет статус код `200 OK` без тела ответа.
+
+В случае ошибки (например, если задача с указанным идентификатором не найдена) API вернет ошибку с соответствующим HTTP статусом и описанием.
+
+```json
+HTTP/1.1 404 Not Found
+Content-Type: application/json
+
+{
+"error": "Задача не найдена",
+"message": "Задача с предоставленным идентификатором не существует в системе"
+}
+```
+### Пример использования
+
+Для удаления задачи отправьте DELETE запрос на `/api/tasks/{id}` с идентификатором задачи в URL. Убедитесь, что вы включили ваш API-ключ в заголовок Authorization.
