Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/post-tasks.mdx
+++ b/api-reference/endpoint/post-tasks.mdx
@@ -68,3 +68,6 @@ Content-Type: application/json
 ```
 ### Пример использования
 Для создания задачи отправьте POST запрос на `/api/tasks` с необходимыми данными в JSON формате. В ответе вы получите информацию о созданной задаче или описание ошибки, если запрос выполнить не удалось.
+
+---
+Version: v1.0.0
