Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/get-tasks.mdx
+++ b/api-reference/endpoint/get-tasks.mdx
@@ -2,3 +2,65 @@
 title: 'Список коммуникаций'
 openapi: 'GET /api/tasks/'
 ---
+Метод `GET /api/tasks` предоставляет доступ к списку коммуникаций в системе Квант. Этот метод позволяет извлекать данные о всех созданных задачах, с возможностью фильтрации.
+
+Вы можете фильтровать коммуникации по различным параметрам, включая тип задачи, статус (например, "входящие", "принятые", "в работе", "выполненные", "запланированные") и назначенному исполнителю.
+
+### Авторизация
+
+Для всех запросов к API требуется API-ключ. Вы должны передать его в заголовке Authorization с префиксом Bearer.
+
+```json
+Bearer ваш_API-ключ
+```
+
+### Тело запроса
+
+Тело запроса должно быть в формате `application/json` и содержать следующие поля:
+
+```json
+{
+  "name": "Название задачи",
+  "type": "тип задачи",
+  "description": "Описание задачи",
+  "to_user_id": "идентификатор пользователя, назначенного исполнителем"
+}
+```
+
+- `name` (string, required) - Название задачи.
+- `type` (string, required) - Тип задачи, допустимые значения: "задача", "обращение", "принятое решение".
+- `description` (string, optional) - Подробное описание задачи.
+- `to_user_id` (string, required) - Идентификатор пользователя, назначенного исполнителем.
+
+### Успешный ответ
+При успешном создании задачи возвращается объект с подробной информацией о задаче.
+
+```json
+HTTP/1.1 200 OK
+Content-Type: application/json
+
+{
+  "id": "идентификатор задачи",
+  "name": "Название задачи",
+  "type": "тип задачи",
+  "status": "входящая",
+  "description": "Описание задачи",
+  "to_user_id": "идентификатор пользователя, назначенного исполнителем",
+  "created_at": "дата и время создания задачи в формате ISO 8601"
+}
+```
+
+### Ошибка
+Если запрос не может быть обработан из-за неверных данных, возвращается ошибка с соответствующим описанием.
+
+```json
+HTTP/1.1 400 Bad Request
+Content-Type: application/json
+
+{
+  "error": "Ошибка валидации",
+  "message": "Неверно указаны данные задачи"
+}
+```
+### Пример использования
+Для создания задачи отправьте POST запрос на `/api/tasks` с необходимыми данными в JSON формате. В ответе вы получите информацию о созданной задаче или описание ошибки, если запрос выполнить не удалось.
