Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/get-tasks.mdx
+++ b/api-reference/endpoint/get-tasks.mdx
@@ -14,6 +14,14 @@ openapi: 'GET /api/tasks/'
 Bearer ваш_API-ключ
 ```
 
+### Парметры запроса
+
+Этот метод поддерживает следующие параметры запроса для фильтрации списка коммуникаций:
+
+`type` (string, optional) - Фильтр по типу задачи.
+`status` (string, optional) - Фильтр по статусу задачи.
+`to_user_id` (string, optional) - Фильтр по идентификатору исполнителя.
+
 ### Тело запроса
 
 Тело запроса должно быть в формате `application/json` и содержать следующие поля:
