--- a/api-reference/endpoint/get-tasks.mdx
+++ b/api-reference/endpoint/get-tasks.mdx
@@ -18,44 +18,27 @@ Bearer ваш_API-ключ
 
 Этот метод поддерживает следующие параметры запроса для фильтрации списка коммуникаций:
 
-`type` (string, optional) - Фильтр по типу задачи.
-`status` (string, optional) - Фильтр по статусу задачи.
-`to_user_id` (string, optional) - Фильтр по идентификатору исполнителя.
+- `type` (string, optional) - Фильтр по типу задачи.
+- `status` (string, optional) - Фильтр по статусу задачи.
+- `to_user_id` (string, optional) - Фильтр по идентификатору исполнителя.
 
-### Тело запроса
-
-Тело запроса должно быть в формате `application/json` и содержать следующие поля:
-
-```json
-{
-  "name": "Название задачи",
-  "type": "тип задачи",
-  "description": "Описание задачи",
-  "to_user_id": "идентификатор пользователя, назначенного исполнителем"
-}
-```
-
-- `name` (string, required) - Название задачи.
-- `type` (string, required) - Тип задачи, допустимые значения: "задача", "обращение", "принятое решение".
-- `description` (string, optional) - Подробное описание задачи.
-- `to_user_id` (string, required) - Идентификатор пользователя, назначенного исполнителем.
 
 ### Успешный ответ
-При успешном создании задачи возвращается объект с подробной информацией о задаче.
+Сервер вернет массив объектов, каждый из которых представляет задачу.
 
 ```json
 HTTP/1.1 200 OK
 Content-Type: application/json
 
-{
-  "id": "идентификатор задачи",
-  "name": "Название задачи",
-  "type": "тип задачи",
-  "status": "входящая",
-  "description": "Описание задачи",
-  "to_user_id": "идентификатор пользователя, назначенного исполнителем",
-  "created_at": "дата и время создания задачи в формате ISO 8601"
-}
+  {
+    "id": "идентификатор задачи",
+    "name": "Название задачи",
+    "type": "тип задачи",
+    "status": "статус задачи",
+    "description": "Описание задачи",
+    "to_user_id": "идентификатор исполнителя",
+    "created_at": "дата и время создания задачи в формате ISO 8601"
+  },
 ```
 
 ### Ошибка
@@ -66,9 +49,15 @@ HTTP/1.1 400 Bad Request
 Content-Type: application/json
 
 {
-  "error": "Ошибка валидации",
-  "message": "Неверно указаны данные задачи"
+  "error": "Ошибка в запросе",
+  "message": "Неверные параметры запроса"
 }
 ```
 ### Пример использования
-Для создания задачи отправьте POST запрос на `/api/tasks` с необходимыми данными в JSON формате. В ответе вы получите информацию о созданной задаче или описание ошибки, если запрос выполнить не удалось.
+Для получения списка коммуникаций отправьте GET запрос на `/api/tasks` с необходимыми параметрами фильтрации. Например, чтобы получить список задач, назначенных определенному пользователю, ваш запрос может выглядеть так:
+
+```json
+GET /api/tasks?to_user_id=идентификатор_пользователя
+```
+
+В ответе вы получите список задач, соответствующих заданным критериям фильтрации.
