Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/get-task-detail.mdx
+++ b/api-reference/endpoint/get-task-detail.mdx
@@ -2,3 +2,58 @@
 title: 'Информация о коммуникации'
 openapi: 'GET /api/tasks/{id}'
 ---
+Метод `GET /api/tasks/{id}` позволяет получить детальную информацию о конкретной коммуникации по её идентификатору. Этот метод полезен, когда вам нужны подробные данные об одной задаче, включая ее статус, тип, описание и другую информацию.
+
+### Авторизация
+
+Для всех запросов к API требуется API-ключ. Вы должны передать его в заголовке Authorization с префиксом Bearer.
+
+```json
+Bearer ваш_API-ключ
+```
+
+### Парметры запроса
+
+Для получения информации о задаче, необходимо указать идентификатор задачи в пути запроса:
+
+- `id` (string, required) - Идентификатор коммуникации (задачи).
+
+
+### Успешный ответ
+При успешном запросе сервер вернет объект, содержащий детальную информацию о задаче.
+
+```json
+HTTP/1.1 200 OK
+Content-Type: application/json
+
+{
+  "id": "идентификатор задачи",
+  "name": "Название задачи",
+  "type": "тип задачи",
+  "status": "статус задачи",
+  "description": "Описание задачи",
+  "to_user_id": "идентификатор исполнителя",
+  "created_at": "дата и время создания задачи в формате ISO 8601"
+}
+```
+
+### Ошибка
+Если запрос не может быть обработан из-за неверных данных, возвращается ошибка с соответствующим описанием.
+
+```json
+HTTP/1.1 400 Bad Request
+Content-Type: application/json
+
+{
+  "error": "Ошибка в запросе",
+  "message": "Неверные параметры запроса"
+}
+```
+### Пример использования
+Для получения списка коммуникаций отправьте GET запрос на `/api/tasks` с необходимыми параметрами фильтрации. Например, чтобы получить список задач, назначенных определенному пользователю, ваш запрос может выглядеть так:
+
+```json
+GET /api/tasks?to_user_id=идентификатор_пользователя
+```
+
+В ответе вы получите список задач, соответствующих заданным критериям фильтрации.
