Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/get-task-detail.mdx
+++ b/api-reference/endpoint/get-task-detail.mdx
@@ -16,7 +16,7 @@ Bearer ваш_API-ключ
 
 Для получения информации о задаче, необходимо указать идентификатор задачи в пути запроса:
 
-- `id` (string, required) - Идентификатор коммуникации (задачи).
+- `id` (string, required) - уникальный идентификатор задачи.
 
 
 ### Успешный ответ
@@ -41,19 +41,13 @@ Content-Type: application/json
 Если запрос не может быть обработан из-за неверных данных, возвращается ошибка с соответствующим описанием.
 
 ```json
-HTTP/1.1 400 Bad Request
+HTTP/1.1 404 Not Found
 Content-Type: application/json
 
 {
-  "error": "Ошибка в запросе",
-  "message": "Неверные параметры запроса"
+  "error": "Задача не найдена",
+  "message": "Задача с предоставленным идентификатором не существует в системе"
 }
 ```
 ### Пример использования
-Для получения списка коммуникаций отправьте GET запрос на `/api/tasks` с необходимыми параметрами фильтрации. Например, чтобы получить список задач, назначенных определенному пользователю, ваш запрос может выглядеть так:
-
-```json
-GET /api/tasks?to_user_id=идентификатор_пользователя
-```
-
-В ответе вы получите список задач, соответствующих заданным критериям фильтрации.
+Для получения информации о конкретной задаче отправьте GET запрос на `/api/tasks/{id}`, заменив `{id}` на реальный идентификатор интересующей вас задачи. В ответе вы получите информацию о задаче.
