Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/post-tasks.mdx
+++ b/api-reference/endpoint/post-tasks.mdx
@@ -47,7 +47,7 @@ Content-Type: application/json
   "id": "идентификатор задачи",
   "name": "Название задачи",
   "type": "тип задачи",
-  "status": "входящая",
+  "status": "входящие",
   "description": "Описание задачи",
   "to_user_id": "идентификатор пользователя, назначенного исполнителем",
   "created_at": "дата и время создания задачи в формате ISO 8601"
