Documentation edits made through Mintlify web editor

--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -11,7 +11,7 @@ REST API Квант разработан так, чтобы его было пр
 
 ## Аутентификация
 
-API Квант использует API-ключи для проверки и авторизации запросов. Вы можете управлять и просматривать свои API-ключи через панель управления Квант, или запросить ключ через поддержку. Вам нужно передать свой API-ключ в заголовке авторизации с префиксом `Bearer` при отправке запроса.
+API Квант использует API-ключи для проверки и авторизации запросов. Вы можете управлять и просматривать свои API-ключи через панель управления Квант, или запросить ключ через поддержку. Вам нужно передать свой API-ключ в заголовке `Authorization` с префиксом `Bearer` при отправке запроса.
 
 ```json
 Bearer ВАШ_API_КЛЮЧ
