Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/get-tasks.mdx
+++ b/api-reference/endpoint/get-tasks.mdx
@@ -6,7 +6,7 @@ openapi: 'GET /api/tasks/'
 
 Вы можете фильтровать коммуникации по различным параметрам, включая тип задачи, статус (например, "входящие", "принятые", "в работе", "выполненные", "запланированные") и назначенному исполнителю.
 
-### Парметры запроса
+### Параметры запроса
 
 Этот метод поддерживает следующие параметры запроса для фильтрации списка коммуникаций:
 
