--- a/api-reference/endpoint/post-tasks.mdx
+++ b/api-reference/endpoint/post-tasks.mdx
@@ -10,13 +10,13 @@ openapi: 'POST /api/tasks/'
 
 Политика доступа к задаче устанавливается как открытая по умолчанию для новых задач. Вы также можете добавить политику доступа при создании новой задачи, добавив `"accessPolicy": { "type": "public" }`
 
-### Авторизация
+### Параметры запроса
 
-Для всех запросов к API требуется API-ключ. Вы должны передать его в заголовке Authorization с префиксом Bearer.
-
-```json
-Bearer ваш_API-ключ
-```
+- `name` (string, required) - Название задачи.
+- `type` (string, optional) - Фильтр по типу задачи.  
+  Допустимые значения: `task` (задача), `request` (обращение), `decision` (решение), `meeting` (встреча).
+- `description` (string, optional) - Описание задачи. Это поле не обязательно для заполнения.
+- `to_user_id` (number, required) - Идентификатор пользователя, назначенного исполнителем.
 
 ### Тело запроса
 
@@ -24,10 +24,10 @@ Bearer ваш_API-ключ
 
 ```json
 {
-  "name": "Название задачи",
-  "type": "тип задачи",
-  "description": "Описание задачи",
-  "to_user_id": "идентификатор пользователя, назначенного исполнителем"
+  "name": "string",
+  "type": "string",
+  "description"?: "string",
+  "to_user_id": number
 }
 ```
 
