Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/delete-task.mdx
+++ b/api-reference/endpoint/delete-task.mdx
@@ -7,35 +7,60 @@ openapi: 'DELETE /api/tasks/{id}'
 
 Удаление задачи является необратимой операцией, поэтому используйте этот метод с осторожностью.
 
-### Авторизация
-
-Для всех запросов к API требуется API-ключ. Вы должны передать его в заголовке Authorization с префиксом Bearer.
-
-```json
-Bearer ваш_API-ключ
-```
-
 ### Параметры запроса
 
-При отправке запроса необходимо указать идентификатор задачи в URL.
+Для получения информации о задаче, необходимо указать идентификатор задачи в пути запроса:
 
-- `id` (string, required) - Уникальный идентификатор задачи, которую вы хотите удалить.
+- `id` (number, required) - уникальный идентификатор задачи.
 
-### Ответы API
+### Пример запроса
+```json
+DELETE /api/tasks/12345
+```
 
-Успешное удаление задачи вернет статус код `200 OK` без тела ответа.
-
-В случае ошибки (например, если задача с указанным идентификатором не найдена) API вернет ошибку с соответствующим HTTP статусом и описанием.
+### Успешный ответ
+При успешном удалении задачи сервер вернет HTTP статус 204, не возвращая тело ответа.
 
 ```json
-HTTP/1.1 404 Not Found
-Content-Type: application/json
+HTTP/1.1 204 No Content
+```
 
+### Ошибка
+Если запрос не может быть обработан из-за неверных данных, возвращается ошибка с соответствующим описанием.
+
+- 400 (Bad Request):
+```json
 {
-"error": "Задача не найдена",
-"message": "Задача с предоставленным идентификатором не существует в системе"
+  "error": "Ошибка в запросе",
+  "message": "Неверные параметры запроса"
 }
 ```
-### Пример использования
 
-Для удаления задачи отправьте DELETE запрос на `/api/tasks/{id}` с идентификатором задачи в URL. Убедитесь, что вы включили ваш API-ключ в заголовок Authorization.
+- 401 (Unauthorized):
+```json
+{
+  "error": "Неавторизован",
+  "message": "Необходима аутентификация"
+}
+```
+- 403 (Forbidden):
+```json
+{
+  "error": "Доступ запрещен",
+  "message": "У вас нет доступа к этой задаче"
+}
+```
+- 404 (Not Found):
+```json
+{
+  "error": "Задача не найдена",
+  "message": "Задача с указанным ID не существует"
+}
+```
+- Ошибка 429 (Too Many Requests):
+```json
+{
+  "error": "Слишком много запросов",
+  "message": "Превышен лимит запросов"
+}
+```
