--- a/api-reference/endpoint/get-metrics.mdx
+++ b/api-reference/endpoint/get-metrics.mdx
@@ -13,7 +13,11 @@ openapi: 'GET /api/metrics/'
 - `status` (string, optional) - Фильтр по статусу задачи.  
   Допустимые значения: `incoming` (входящие), `accepted` (принятые), `in_progress` (в работе), `completed` (выполненные), `planned` (запланированные).
 - `to_user_id` (string, optional) - Фильтр по идентификатору исполнителя.
-- `total_count` (number) - Общее количество задач в списке, возвращаемое запросом.
+- `total_count` (number) - Общее количество показателей в списке, возвращаемое запросом.
+
+date_from (date, optional) - Начальная дата промежутка.
+date_to (date, optional) - Конечная дата промежутка.
+function_id (integer, optional) - Идентификатор функции пользователя для фильтрации показателей.
 
 ```json
 GET /api/tasks
