Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/post-metrics.mdx
+++ b/api-reference/endpoint/post-metrics.mdx
@@ -2,3 +2,5 @@
 title: 'Обновление данных показателя'
 openapi: 'POST /api/metrics/{id}'
 ---
+Метод `POST /api/metrics/{id}` позволяет обновить данные конкретного показателя в системе Квант. Для выполнения этого запроса необходимо указать идентификатор показателя в URL запроса и предоставить обновленные данные в теле запроса.
+
