Documentation edits made through Mintlify web editor

--- a/api-reference/contacts.mdx
+++ b/api-reference/contacts.mdx
@@ -1,4 +1,20 @@
 ---
 title: 'Помощь'
-description: 'Description of your new file.'
 ---
+На этой странице вы найдете информацию о том, как связаться с нами и как получить API ключ.
+
+## Как связаться с нами
+
+Если у вас возникли вопросы или нужна помощь, свяжитесь с нами:
+
+- По электронной почте: [p@rsuquant.ru](mailto:p@rsuquant.ru)
+- В Телеграм: [Квант Телеграм](https://t.me/quantteam)
+
+## Как получить API ключ
+
+Для получения API ключа отправьте нам письмо на [p@rsuquant.ru](mailto:p@rsuquant.ru) с указанием нижеуказанной информации. Мы рассмотрим ваш запрос и свяжемся с вами.
+
+### Шаблон письма для запроса API ключа
+
+Скопируйте и вставьте следующий текст в письмо, заменив `'Ваше имя'` и `'Название вашей компании'` на соответствующую информацию:
+
