Documentation edits made through Mintlify web editor

--- a/api-reference/contacts.mdx
+++ b/api-reference/contacts.mdx
@@ -1,20 +1,24 @@
 ---
 title: 'Помощь'
 ---
+
 На этой странице вы найдете информацию о том, как связаться с нами и как получить API ключ.
 
 ## Как связаться с нами
 
-Если у вас возникли вопросы или нужна помощь, свяжитесь с нами:
+Если у вас возникли вопросы или нужна помощь, у вас есть несколько способов связаться с нами:
 
 - По электронной почте: [p@rsuquant.ru](mailto:p@rsuquant.ru)
-- В Телеграм: [Квант Телеграм](https://t.me/quantteam)
+- В Телеграм: [Квант Телеграм](https://t.me/quantteam). Вы также можете написать в чат сообщества, но для более конфиденциальных вопросов рекомендуем отправлять сообщения напрямую.
+- Через ваш аккаунт в системе Квант: Перейдите на [главную страницу Квант](https://rsuquant.rsuquant.ru/home/show), в нижней части навигации слева найдите иконку чата, где вы можете написать менеджерам напрямую.
 
 ## Как получить API ключ
 
-Для получения API ключа отправьте нам письмо на [p@rsuquant.ru](mailto:p@rsuquant.ru) с указанием нижеуказанной информации. Мы рассмотрим ваш запрос и свяжемся с вами.
+Для получения API ключа отправьте нам письмо на [p@rsuquant.ru](mailto:p@rsuquant.ru) с указанием нижеуказанной информации. Мы рассмотрим ваш запрос и свяжемся с вами в самое короткое время.
 
 ### Шаблон письма для запроса API ключа
 
 Скопируйте и вставьте следующий текст в письмо, заменив `'Ваше имя'` и `'Название вашей компании'` на соответствующую информацию:
+
+
 
