Documentation edits made through Mintlify web editor

--- a/api-reference/contacts.mdx
+++ b/api-reference/contacts.mdx
@@ -20,5 +20,10 @@ title: 'Помощь'
 
 Скопируйте и вставьте следующий текст в письмо, заменив `'Ваше имя'` и `'Название вашей компании'` на соответствующую информацию:
 
+```json
+Здравствуйте,
 
+Меня зовут 'Ваше имя', и я представляю компанию 'Название вашей компании'. Я хочу получить доступ к API ключу системы Квант.
 
+Спасибо.
+```
