Documentation edits made through Mintlify web editor

--- a/api-reference/contacts.mdx
+++ b/api-reference/contacts.mdx
@@ -23,7 +23,8 @@ title: 'Помощь'
 ```json
 Здравствуйте,
 
-Меня зовут 'Ваше имя', и я представляю компанию 'Название вашей компании'. Я хочу получить доступ к API ключу системы Квант.
+Меня зовут 'Ваше имя', и я представляю компанию 'Название вашей компании'. 
+Я хочу получить доступ к API ключу системы Квант.
 
 Спасибо.
 ```
