Documentation edits made through Mintlify web editor

--- a/api-reference/contacts.mdx
+++ b/api-reference/contacts.mdx
@@ -18,7 +18,7 @@ title: 'Помощь'
 
 ### Шаблон письма для запроса API ключа
 
-Скопируйте и вставьте следующий текст в письмо, заменив `'Ваше имя'` и `'Название вашей компании'` на соответствующую информацию:
+Для ускорения процедуры получения ключа, мы подготовили шаблон письма. Скопируйте и вставьте следующий текст в письмо, заменив `'Ваше имя'` и `'Название вашей компании'` на соответствующую информацию:
 
 ```json
 Здравствуйте,
