Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/get-tasks.mdx
+++ b/api-reference/endpoint/get-tasks.mdx
@@ -4,7 +4,7 @@ openapi: 'GET /api/tasks/'
 ---
 Метод `GET /api/tasks` предоставляет доступ к списку коммуникаций в системе Квант. Этот метод позволяет извлекать данные о всех созданных задачах, с возможностью фильтрации.
 
-Вы можете фильтровать коммуникации по различным параметрам, включая тип задачи, статус (например, "входящие", "принятые", "в работе", "выполненные", "запланированные") и назначенному исполнителю.
+Вы можете фильтровать коммуникации по различным параметрам, включая тип задачи, статус (например, "входящие", "принятые", "в работе", "выполненные", "запланированные", "на утверждении") и назначенному исполнителю.
 
 ### Параметры запроса
 
@@ -13,7 +13,7 @@ openapi: 'GET /api/tasks/'
 - `type` (string, optional) - Фильтр по типу задачи.  
   Допустимые значения: `task` (задача), `request` (обращение), `decision` (решение), `meeting` (встреча).
 - `status` (string, optional) - Фильтр по статусу задачи.  
-  Допустимые значения: `incoming` (входящие), `accepted` (принятые), `in_progress` (в работе), `completed` (выполненные), `planned` (запланированные), `___` (на утверждении).
+  Допустимые значения: `incoming` (входящие), `accepted` (принятые), `in_progress` (в работе), `completed` (выполненные), `planned` (запланированные), `on_approval` (на утверждении).
 - `performer` (number, optional) - Фильтр по исполнителю.
 - `total_count` (number) - Общее количество задач в списке, возвращаемое запросом.
 
@@ -21,7 +21,7 @@ openapi: 'GET /api/tasks/'
 GET /api/tasks
 {
   "type"?: "task" | "request" | "decision" | "meeting",
-  "status"?: "incoming" | "accepted" | "in_progress" | "completed" | "planned",
+  "status"?: "incoming" | "accepted" | "in_progress" | "completed" | "planned" | "on_approval",
   "to_user_id"?: string
 }
 ```
