--- a/api-reference/endpoint/get-tasks.mdx
+++ b/api-reference/endpoint/get-tasks.mdx
@@ -22,12 +22,12 @@ GET /api/tasks
 {
   "type"?: "task" | "request" | "decision" | "meeting",
   "status"?: "incoming" | "accepted" | "in_progress" | "completed" | "planned" | "on_approval",
-  "to_user_id"?: string
+  "performer"?: number
 }
 ```
 ### Пример запроса
 ```json
-GET /api/tasks?type=task&status=incoming&to_user_id=123
+GET /api/tasks?type=task&status=incoming&performer=123
 ```
 
 ### Успешный ответ
@@ -43,7 +43,7 @@ GET /api/tasks?type=task&status=incoming&to_user_id=123
       "type": "task",
       "status": "in_progress",
       "description": "Подробно изучить документацию API Кванта и применить знания на практике",
-      "to_user_id": 123,
+      "performer": 123,
       "created_at": "2023-12-05T12:00:00Z"
     },
     {
@@ -52,7 +52,7 @@ GET /api/tasks?type=task&status=incoming&to_user_id=123
       "type": "task",
       "status": "planned",
       "description": "Спроектировать и реализовать интеграцию с Квант для улучшения рабочих процессов",
-      "to_user_id": 123,
+      "performer": 123,
       "created_at": "2023-12-10T10:00:00Z"
     }
   ]
