--- a/api-reference/endpoint/get-tasks.mdx
+++ b/api-reference/endpoint/get-tasks.mdx
@@ -66,7 +66,7 @@ GET /api/tasks?type=task&status=incoming&performer=123
 ```json
 {
   "error": "Ошибка в запросе",
-  "message": "Неверные параметры запроса"
+  "message": "Неверные параметры запроса. Проверьте правильность всех введенных данных, особенно фильтров."
 }
 ```
 
@@ -74,27 +74,27 @@ GET /api/tasks?type=task&status=incoming&performer=123
 ```json
 {
   "error": "Неавторизован",
-  "message": "Необходима аутентификация"
+  "message": "Необходима аутентификация. Убедитесь, что вы предоставили правильный API-ключ в заголовке запроса."
 }
 ```
 - 403 (Forbidden):
 ```json
 {
   "error": "Доступ запрещен",
-  "message": "У вас нет доступа к этой задаче"
+  "message": "У вас нет доступа к этой задаче. Проверьте, что у вашего аккаунта есть соответствующие права доступа."
 }
 ```
 - 404 (Not Found):
 ```json
 {
   "error": "Задача не найдена",
-  "message": "Задача с указанным ID не существует"
+  "message": "Задача с указанным ID не существует. Убедитесь, что вы используете правильный идентификатор задачи."
 }
 ```
 - Ошибка 429 (Too Many Requests):
 ```json
 {
   "error": "Слишком много запросов",
-  "message": "Превышен лимит запросов"
+  "message": "Превышен лимит запросов. Подождите некоторое время, прежде чем отправлять новый запрос."
 }
 ```
